--- a/teamProject/src/main/webapp/mainresource/css/style.css
+++ b/teamProject/src/main/webapp/mainresource/css/style.css
@@ -3232,12 +3232,13 @@ absolute
 }
 
 .single-search-product-wrapper {
-	padding: 12px 20px 10px 30px;
-	border: 1px solid #EEEEEE
+	width: 260px;
+	border: 1px solid #EEEEEE;
+    padding-left: 25%
 }
 
 .single-search-product img {
-	max-width: 70px;
+	max-width: 120px;
 	height: auto
 }
 
@@ -3254,9 +3255,10 @@ absolute
 }
 
 .single-search-product .desc .price {
-	font-size: 16px;
+	font-size: 18px;
 	font-weight: 500;
-	color: #777777
+	color: #777777;
+	text-align: center;
 }
 
 .single-search-product .desc .price span {
@@ -4649,8 +4651,12 @@ absolute
 }
 
 .s_product_text {
-	margin-left: -15px;
+	margin-left: 30px;
 	margin-top: 65px
+}
+.heart{
+	padding-rigth:30px;
+	
 }
 
 @media ( max-width : 575px) {
@@ -4668,7 +4674,7 @@ absolute
 
 .s_product_text h2 {
 	font-family: "Roboto", sans-serif;
-	font-size: 24px;
+	font-size: 15px;
 	font-weight: 700;
 	color: #002347;
 	margin-bottom: 10px
@@ -4770,6 +4776,7 @@ absolute
 }
 
 .product_count {
+	
 	display: inline-block;
 	position: relative;
 	margin-bottom: 24px
