--- a/teamProject/src/main/webapp/mainresource/css/style.css
+++ b/teamProject/src/main/webapp/mainresource/css/style.css
@@ -162,7 +162,8 @@ a {
 }
 
 .header_area .navbar .nav .nav-item .nav-link:after {
-	display: none
+	display: none;
+	font-size:small;
 }
 
 .header_area .navbar .nav .nav-item:hover .nav-link, .header_area .navbar .nav .nav-item.active .nav-link
@@ -190,7 +191,7 @@ a {
 		position: absolute;
 		top: 120%;
 		left: 0px;
-		min-width: 200px;
+		min-width: 150px;
 		text-align: left;
 		opacity: 0;
 		transition: all 300ms ease-in;
