--- a/teamProject/src/main/webapp/mainresource/css/style.css
+++ b/teamProject/src/main/webapp/mainresource/css/style.css
@@ -58,8 +58,8 @@ h3, .h3 {
 }
 
 h4, .h4 {
-	font-size: 20px;
-	font-weight: 400;
+	font-size: 17px;
+	font-weight: 500;
 	line-height: 1.3
 }
 
@@ -846,7 +846,7 @@ a {
 }
 
 .card-product__img {
-	position: relative
+	position: relative;
 }
 
 .card-product__imgOverlay {
@@ -905,6 +905,10 @@ a {
 
 .card-product:hover .card-product__title a {
 	color: #002347
+}
+.img-fluid{
+	max-height: 380px;
+	    min-height: 380px;
 }
 
 .offer {
@@ -1370,7 +1374,12 @@ a {
 
 
 
-
+.card-body {
+	
+	padding: 5px;
+    min-height: 146px;
+	
+}
 
 
 
@@ -1382,8 +1391,9 @@ a {
 }
 
 .card-blog .card-body {
-	padding: 25px 25px 25px 0
+	padding: 10px 10px 10px 0
 }
+
 
 .card-blog__info {
 	margin-bottom: 12px
@@ -1841,9 +1851,9 @@ a {
 
 .causes_item .causes_text h4 {
 	color: #222;
-	font-size: 18px;
+	font-size: 15px;
 	font-weight: 600;
-	margin-bottom: 15px;
+	margin-bottom: 10px;
 	cursor: pointer
 }
 
