--- a/teamProject/src/main/webapp/mainresource/scss/theme/_header.scss
+++ b/teamProject/src/main/webapp/mainresource/scss/theme/_header.scss
@@ -126,13 +126,13 @@
   }
   &.navbar_fixed {
       .main_menu {
-          position: fixed;
+          position: static;
           width: 100%;
           top: -70px;
           left: 0;
           right: 0;
           background: #ffffff;
-          @include transform(translateY(70px));
+          @include transform(translateY(40px));
           @include transition();
           box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.1);
           .navbar {
