--- a/teamProject/src/main/webapp/resource/css1/style.css
+++ b/teamProject/src/main/webapp/resource/css1/style.css
@@ -1169,7 +1169,7 @@ button:focus {
   background: #fff; }
 
 .blog_right_sidebar {
-  background: #f1f9ff;
+  background: #f3f2ee;
   padding: 30px; }
   @media (max-width: 991px) {
     .blog_right_sidebar {
