--- a/teamProject/src/main/webapp/mainresource/css/main.css
+++ b/teamProject/src/main/webapp/mainresource/css/main.css
@@ -2615,7 +2615,7 @@ a {
 }
 
 .comment-form {
-	background: #fafaff;
+	background: #f6f6f6;
 	text-align: center;
 	border: 1px solid #eee;
 	padding: 47px 30px 43px;
