--- a/teamProject/src/main/webapp/resource/css1/style.css
+++ b/teamProject/src/main/webapp/resource/css1/style.css
@@ -1522,7 +1522,7 @@ button:focus {
       color: #002347; }
 
 .comment-form {
-  background: #f1f9ff;
+  background: #f6f6f6;
   text-align: center;
   padding: 47px 30px 43px;
   margin-top: 50px;
