--- a/teamProject/src/main/webapp/resource/sass/_breadcrumb.scss
+++ b/teamProject/src/main/webapp/resource/sass/_breadcrumb.scss
@@ -3,7 +3,8 @@
 -----------------------*/
 .breadcrumb-option {
     background: #f3f2ee;
-    padding: 40px 0;
+    padding: 20px 0;
+    height: 110px;
 }
 
 .breadcrumb__text {
