--- a/teamProject/src/main/webapp/resource/css/style.css
+++ b/teamProject/src/main/webapp/resource/css/style.css
@@ -2055,7 +2055,8 @@ ol {
 
 .breadcrumb-option {
 	background: #f3f2ee;
-	padding: 40px 0;
+	padding: 20px 0;
+  height: 110px;
 }
 
 .breadcrumb__text h4 {
