--- a/teamProject/src/main/webapp/resource/scss/_blog.scss
+++ b/teamProject/src/main/webapp/resource/scss/_blog.scss
@@ -633,10 +633,10 @@
 }
 
 .comment-form {
-  background: #f1f9ff;
+  background: #f6f6f6;
   text-align: center;
-  padding: 47px 30px 43px;
-  margin-top: 50px;
+  padding: 20px 20px 23px;
+  margin-top: 30px;
   margin-bottom: 40px;
   h4 {
     text-align: center;
