--- a/teamProject/src/main/webapp/resource/css1/style.css
+++ b/teamProject/src/main/webapp/resource/css1/style.css
@@ -1238,7 +1238,7 @@ button:focus {
   .blog_right_sidebar .popular_post_widget .post_item .media-body {
     justify-content: center;
     align-self: center;
-    padding-left: 20px; }
+    padding-left: 25% }
     .blog_right_sidebar .popular_post_widget .post_item .media-body h3 {
       font-size: 14px;
       line-height: 20px;
