--- a/teamProject/src/main/webapp/mainresource/css/style.css
+++ b/teamProject/src/main/webapp/mainresource/css/style.css
@@ -5,7 +5,7 @@
 
 body {
 	color: #777;
-	font-family: "Roboto", sans-serif;
+	font-family: 'Hi Melody', cursive;
 	font-size: 15px;
 	font-weight: 400;
 	line-height: 1.667
@@ -31,8 +31,7 @@ button:focus {
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: "Oswald", sans-serif;
-	color: #222;
+font-family: 'Hi Melody', cursive;	color: #222;
 	line-height: 1.1
 }
 
@@ -404,8 +403,7 @@ a {
 	line-height: 40px;
 	font-size: 14px;
 	font-weight: 600;
-	font-family: "Oswald", sans-serif;
-	background: transparent;
+font-family: 'Hi Melody', cursive;	background: transparent;
 	-webkit-transition: all 0.3s ease 0s;
 	-moz-transition: all 0.3s ease 0s;
 	-o-transition: all 0.3s ease 0s;
@@ -749,13 +747,13 @@ a {
 
 .hero-banner__content h4 {
 	font-size: 30px;
-	font-family: "Roboto", sans-serif;
+	font-family: 'Hi Melody', cursive;
 	color: #555555;
 	margin-bottom: 12px
 }
 
 .hero-banner__content h1 {
-	font-family: "Roboto", sans-serif;
+	font-family: 'Hi Melody', cursive;
 	font-size: 25px;
 	text-transform: uppercase;
 	font-weight: 700;
@@ -2901,8 +2899,7 @@ a {
 }
 
 .sidebar-categories .head {
-	font-family: 'Oswald', sans-serif;
-	line-height: 50px;
+font-family: 'Hi Melody', cursive;	line-height: 50px;
 	background: #002347;
 	padding: 0 30px;
 	font-size: 18px;
@@ -2950,8 +2947,7 @@ a {
 }
 
 .sidebar-filter .top-filter-head {
-	font-family: 'Oswald', sans-serif;
-	line-height: 50px;
+font-family: 'Hi Melody', cursive;	line-height: 50px;
 	background: #002347;
 	padding: 0 30px;
 	font-size: 18px;
@@ -3259,8 +3255,7 @@ absolute
 }
 
 .single-search-product .desc .title {
-	font-family: 'Oswald', sans-serif;
-	color: #222;
+font-family: 'Hi Melody', cursive;	color: #222;
 	margin-bottom: 0;
 	display: inline-block
 }
@@ -3375,8 +3370,7 @@ absolute
 .order_details_table .table thead tr th {
 	border-bottom: 1px solid #ddd;
 	font-size: 16px;
-	font-family: "Oswald", sans-serif;
-	font-weight: normal;
+font-family: 'Hi Melody', cursive;	font-weight: normal;
 	color: #222
 }
 
@@ -3396,7 +3390,7 @@ absolute
 }
 
 .order_details_table .table tbody tr td h5 {
-	font-family: "Roboto", sans-serif;
+	font-family: 'Hi Melody', cursive;
 	color: #222;
 	margin-bottom: 0px;
 	font-size: 15px;
@@ -3405,7 +3399,7 @@ absolute
 }
 
 .order_details_table .table tbody tr td h4 {
-	font-family: "Roboto", sans-serif;
+	font-family: 'Hi Melody', cursive;
 	text-transform: uppercase;
 	margin-bottom: 0px;
 	color: #222;
@@ -3491,7 +3485,7 @@ absolute
 .check_title h2 {
 	font-size: 15px;
 	font-weight: normal;
-	font-family: "Roboto", sans-serif;
+	font-family: 'Hi Melody', cursive;
 	background: ffffff;
 	line-height: 40px !important;
 	padding-left: 30px;
@@ -3743,7 +3737,7 @@ absolute
 }
 
 .order_box .list li a h4 {
-	font-family: "Roboto", sans-serif;
+	font-family: 'Hi Melody', cursive;
 	font-size: 15px;
 	margin-top: 15px
 }
@@ -4295,8 +4289,7 @@ absolute
 	border-top: 0px;
 	font-size: 16px;
 	font-weight: 500;
-	font-family: "Oswald", sans-serif;
-	color: #222;
+font-family: 'Hi Melody', cursive;	color: #222;
 	border-bottom: 0px !important
 }
 
@@ -4334,7 +4327,7 @@ absolute
 .cart_inner .table tbody tr td h5 {
 	font-size: 15px;
 	color: #222;
-	font-family: "Roboto", sans-serif;
+	font-family: 'Hi Melody', cursive;
 	margin-bottom: 0px
 }
 
@@ -4684,7 +4677,7 @@ absolute
 }
 
 .s_product_text h2 {
-	font-family: "Roboto", sans-serif;
+	font-family: 'Hi Melody', cursive;
 	font-size: 15px;
 	font-weight: 700;
 	color: #002347;
@@ -4912,7 +4905,7 @@ absolute
 }
 
 .product_description_area .tab-content .total_rate .box_total h6 {
-	font-family: "Roboto", sans-serif;
+	font-family: 'Hi Melody', cursive;
 	margin-bottom: 0px;
 	font-size: 14px;
 	color: #555555;
@@ -5155,7 +5148,7 @@ absolute
 
 .tp_widgets .list li a {
 	color: #FFFFFF;
-	font-family: "Roboto", sans-serif
+	font-family: 'Hi Melody', cursive;
 }
 
 .tp_widgets .list li a:hover {
@@ -5174,8 +5167,7 @@ absolute
 	font-size: 20px;
 	line-height: 24px;
 	font-weight: 500;
-	font-family: "Oswald", sans-serif;
-	text-transform: capitalize;
+font-family: 'Hi Melody', cursive;	text-transform: capitalize;
 	color: #fff;
 	margin-bottom: 28px
 }
