--- a/teamProject/src/main/webapp/mainresource/css/main.css
+++ b/teamProject/src/main/webapp/mainresource/css/main.css
@@ -5,7 +5,7 @@
 
 body {
 	color: #777;
-	font-family: "Roboto", sans-serif;
+	font-family: 'Hi Melody', cursive;
 	font-size: 15px;
 	font-weight: 400;
 	line-height: 1.667
@@ -31,7 +31,7 @@ button:focus {
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: "Oswald", sans-serif;
+	font-family: 'Hi Melody', cursive;
 	color: #222;
 	line-height: 1.1
 }
@@ -402,7 +402,7 @@ a {
 	line-height: 40px;
 	font-size: 14px;
 	font-weight: 600;
-	font-family: "Oswald", sans-serif;
+	font-family: 'Hi Melody', cursive;
 	background: transparent;
 	-webkit-transition: all 0.3s ease 0s;
 	-moz-transition: all 0.3s ease 0s;
@@ -747,13 +747,13 @@ a {
 
 .hero-banner__content h4 {
 	font-size: 30px;
-	font-family: "Roboto", sans-serif;
+	font-family: 'Hi Melody', cursive;
 	color: #555555;
 	margin-bottom: 12px
 }
 
 .hero-banner__content h1 {
-	font-family: "Roboto", sans-serif;
+	font-family: 'Hi Melody', cursive;
 	font-size: 25px;
 	text-transform: uppercase;
 	font-weight: 700;
@@ -2885,7 +2885,7 @@ a {
 }
 
 .sidebar-categories .head {
-	font-family: 'Oswald', sans-serif;
+	font-family: 'Hi Melody', cursive;
 	line-height: 50px;
 	background: #384aeb;
 	padding: 0 30px;
@@ -2934,7 +2934,7 @@ a {
 }
 
 .sidebar-filter .top-filter-head {
-	font-family: 'Oswald', sans-serif;
+	font-family: 'Hi Melody', cursive;
 	line-height: 50px;
 	background: #384aeb;
 	padding: 0 30px;
@@ -3242,8 +3242,7 @@ absolute
 }
 
 .single-search-product .desc .title {
-	font-family: 'Oswald', sans-serif;
-	color: #222;
+font-family: 'Hi Melody', cursive;	color: #222;
 	margin-bottom: 0;
 	display: inline-block
 }
@@ -3357,8 +3356,7 @@ absolute
 .order_details_table .table thead tr th {
 	border-bottom: 1px solid #ddd;
 	font-size: 16px;
-	font-family: "Oswald", sans-serif;
-	font-weight: normal;
+font-family: 'Hi Melody', cursive;	font-weight: normal;
 	color: #222
 }
 
@@ -3378,7 +3376,7 @@ absolute
 }
 
 .order_details_table .table tbody tr td h5 {
-	font-family: "Roboto", sans-serif;
+	font-family: 'Hi Melody', cursive;
 	color: #222;
 	margin-bottom: 0px;
 	font-size: 15px;
@@ -3387,7 +3385,7 @@ absolute
 }
 
 .order_details_table .table tbody tr td h4 {
-	font-family: "Roboto", sans-serif;
+	font-family: 'Hi Melody', cursive;
 	text-transform: uppercase;
 	margin-bottom: 0px;
 	color: #222;
@@ -3473,7 +3471,7 @@ absolute
 .check_title h2 {
 	font-size: 15px;
 	font-weight: normal;
-	font-family: "Roboto", sans-serif;
+	font-family: 'Hi Melody', cursive;
 	background: #f1f6f7;
 	line-height: 40px !important;
 	padding-left: 30px;
@@ -3725,7 +3723,7 @@ absolute
 }
 
 .order_box .list li a h4 {
-	font-family: "Roboto", sans-serif;
+	font-family: 'Hi Melody', cursive;
 	font-size: 15px;
 	margin-top: 15px
 }
@@ -4273,8 +4271,7 @@ absolute
 	border-top: 0px;
 	font-size: 16px;
 	font-weight: 500;
-	font-family: "Oswald", sans-serif;
-	color: #222;
+font-family: 'Hi Melody', cursive;	color: #222;
 	border-bottom: 0px !important
 }
 
@@ -4312,7 +4309,7 @@ absolute
 .cart_inner .table tbody tr td h5 {
 	font-size: 15px;
 	color: #222;
-	font-family: "Roboto", sans-serif;
+	font-family: 'Hi Melody', cursive;
 	margin-bottom: 0px
 }
 
@@ -4658,7 +4655,7 @@ absolute
 }
 
 .s_product_text h2 {
-	font-family: "Roboto", sans-serif;
+	font-family: 'Hi Melody', cursive;
 	font-size: 24px;
 	font-weight: 700;
 	color: #384aeb;
@@ -4888,7 +4885,7 @@ absolute
 }
 
 .product_description_area .tab-content .total_rate .box_total h6 {
-	font-family: "Roboto", sans-serif;
+	font-family: 'Hi Melody', cursive;
 	margin-bottom: 0px;
 	font-size: 14px;
 	color: #555555;
@@ -5131,7 +5128,7 @@ absolute
 
 .tp_widgets .list li a {
 	color: #7b838a;
-	font-family: "Roboto", sans-serif
+	font-family: 'Hi Melody', cursive;
 }
 
 .tp_widgets .list li a:hover {
@@ -5150,7 +5147,7 @@ absolute
 	font-size: 18px;
 	line-height: 24px;
 	font-weight: 500;
-	font-family: "Oswald", sans-serif;
+	font-family: 'Hi Melody', cursive;
 	text-transform: capitalize;
 	color: #fff;
 	margin-bottom: 28px
