--- a/teamProject/src/main/webapp/mainresource/css/main.css
+++ b/teamProject/src/main/webapp/mainresource/css/main.css
@@ -5,7 +5,7 @@
 
 body {
 	color: #777;
-	font-family: 'Hi Melody', cursive;
+	 font-family: "Roboto", sans-serif;
 	font-size: 15px;
 	font-weight: 400;
 	line-height: 1.667
@@ -31,7 +31,7 @@ button:focus {
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: 'Hi Melody', cursive;
+	 font-family: "Roboto", sans-serif;
 	color: #222;
 	line-height: 1.1
 }
@@ -402,7 +402,7 @@ a {
 	line-height: 40px;
 	font-size: 14px;
 	font-weight: 600;
-	font-family: 'Hi Melody', cursive;
+	 font-family: "Roboto", sans-serif;
 	background: transparent;
 	-webkit-transition: all 0.3s ease 0s;
 	-moz-transition: all 0.3s ease 0s;
@@ -747,13 +747,13 @@ a {
 
 .hero-banner__content h4 {
 	font-size: 30px;
-	font-family: 'Hi Melody', cursive;
+	 font-family: "Roboto", sans-serif;
 	color: #555555;
 	margin-bottom: 12px
 }
 
 .hero-banner__content h1 {
-	font-family: 'Hi Melody', cursive;
+	 font-family: "Roboto", sans-serif;
 	font-size: 25px;
 	text-transform: uppercase;
 	font-weight: 700;
@@ -2885,7 +2885,7 @@ a {
 }
 
 .sidebar-categories .head {
-	font-family: 'Hi Melody', cursive;
+	 font-family: "Roboto", sans-serif;
 	line-height: 50px;
 	background: #384aeb;
 	padding: 0 30px;
@@ -2934,7 +2934,7 @@ a {
 }
 
 .sidebar-filter .top-filter-head {
-	font-family: 'Hi Melody', cursive;
+	 font-family: "Roboto", sans-serif;
 	line-height: 50px;
 	background: #384aeb;
 	padding: 0 30px;
@@ -3242,7 +3242,7 @@ absolute
 }
 
 .single-search-product .desc .title {
-font-family: 'Hi Melody', cursive;	color: #222;
+ font-family: "Roboto", sans-serif;	color: #222;
 	margin-bottom: 0;
 	display: inline-block
 }
@@ -3356,7 +3356,7 @@ font-family: 'Hi Melody', cursive;	color: #222;
 .order_details_table .table thead tr th {
 	border-bottom: 1px solid #ddd;
 	font-size: 16px;
-font-family: 'Hi Melody', cursive;	font-weight: normal;
+ font-family: "Roboto", sans-serif;	font-weight: normal;
 	color: #222
 }
 
@@ -3376,7 +3376,7 @@ font-family: 'Hi Melody', cursive;	font-weight: normal;
 }
 
 .order_details_table .table tbody tr td h5 {
-	font-family: 'Hi Melody', cursive;
+	 font-family: "Roboto", sans-serif;
 	color: #222;
 	margin-bottom: 0px;
 	font-size: 15px;
@@ -3385,7 +3385,7 @@ font-family: 'Hi Melody', cursive;	font-weight: normal;
 }
 
 .order_details_table .table tbody tr td h4 {
-	font-family: 'Hi Melody', cursive;
+	 font-family: "Roboto", sans-serif;
 	text-transform: uppercase;
 	margin-bottom: 0px;
 	color: #222;
@@ -3471,7 +3471,7 @@ font-family: 'Hi Melody', cursive;	font-weight: normal;
 .check_title h2 {
 	font-size: 15px;
 	font-weight: normal;
-	font-family: 'Hi Melody', cursive;
+	 font-family: "Roboto", sans-serif;
 	background: #f1f6f7;
 	line-height: 40px !important;
 	padding-left: 30px;
@@ -3723,7 +3723,7 @@ font-family: 'Hi Melody', cursive;	font-weight: normal;
 }
 
 .order_box .list li a h4 {
-	font-family: 'Hi Melody', cursive;
+	 font-family: "Roboto", sans-serif;
 	font-size: 15px;
 	margin-top: 15px
 }
@@ -4271,7 +4271,7 @@ font-family: 'Hi Melody', cursive;	font-weight: normal;
 	border-top: 0px;
 	font-size: 16px;
 	font-weight: 500;
-font-family: 'Hi Melody', cursive;	color: #222;
+ font-family: "Roboto", sans-serif;	color: #222;
 	border-bottom: 0px !important
 }
 
@@ -4309,7 +4309,7 @@ font-family: 'Hi Melody', cursive;	color: #222;
 .cart_inner .table tbody tr td h5 {
 	font-size: 15px;
 	color: #222;
-	font-family: 'Hi Melody', cursive;
+	 font-family: "Roboto", sans-serif;
 	margin-bottom: 0px
 }
 
@@ -4494,7 +4494,6 @@ font-family: 'Hi Melody', cursive;	color: #222;
 
 .cart_inner .table tbody tr.shipping_area .shipping_box .list li a:after
 	{
-	content: "";
 	height: 10px;
 	width: 10px;
 	border-radius: 50%;
@@ -4655,7 +4654,7 @@ font-family: 'Hi Melody', cursive;	color: #222;
 }
 
 .s_product_text h2 {
-	font-family: 'Hi Melody', cursive;
+	 font-family: "Roboto", sans-serif;
 	font-size: 24px;
 	font-weight: 700;
 	color: #384aeb;
@@ -4885,7 +4884,7 @@ font-family: 'Hi Melody', cursive;	color: #222;
 }
 
 .product_description_area .tab-content .total_rate .box_total h6 {
-	font-family: 'Hi Melody', cursive;
+	 font-family: "Roboto", sans-serif;
 	margin-bottom: 0px;
 	font-size: 14px;
 	color: #555555;
@@ -5128,7 +5127,7 @@ font-family: 'Hi Melody', cursive;	color: #222;
 
 .tp_widgets .list li a {
 	color: #7b838a;
-	font-family: 'Hi Melody', cursive;
+	 font-family: "Roboto", sans-serif;
 }
 
 .tp_widgets .list li a:hover {
@@ -5147,7 +5146,7 @@ font-family: 'Hi Melody', cursive;	color: #222;
 	font-size: 18px;
 	line-height: 24px;
 	font-weight: 500;
-	font-family: 'Hi Melody', cursive;
+	 font-family: "Roboto", sans-serif;
 	text-transform: capitalize;
 	color: #fff;
 	margin-bottom: 28px
