--- a/teamProject/src/main/webapp/resource/resource/css/style.css
+++ b/teamProject/src/main/webapp/resource/resource/css/style.css
@@ -29,11 +29,12 @@
 /*----------------------------------------*/
 /* Template default CSS
 /*----------------------------------------*/
-@import url('https://fonts.googleapis.com/css2?family=Hi+Melody&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,400i,500|Rubik:500, 600");
+
 html,
 body {
 	height: 100%;
-	font-family: 'Hi Melody', cursive;
+	font-family: "Roboto", sans-serif;
 	-webkit-font-smoothing: antialiased;
 }
 
@@ -46,7 +47,7 @@ h6 {
 	margin: 0;
 	color: #111111;
 	font-weight: 400;
-	font-family: 'Hi Melody', cursive;
+	font-family: "Roboto", sans-serif;
 }
 
 h1 {
@@ -75,7 +76,7 @@ h6 {
 
 p {
 	font-size: 15px;
-	font-family: 'Hi Melody', cursive;
+	font-family: "Roboto", sans-serif;
 	color: #3d3d3d;
 	font-weight: 400;
 	line-height: 25px;
@@ -1394,7 +1395,7 @@ ol {
 .shop__sidebar__accordion .card-heading a:after,
 .shop__sidebar__accordion .card-heading>a.active[aria-expanded=false]:after {
 	content: "";
-	font-family: 'Hi Melody', cursive;
+	font-family: "Roboto", sans-serif;
 	font-size: 24px;
 	font-weight: 700;
 	color: #111111;
@@ -1406,7 +1407,7 @@ ol {
 
 .shop__sidebar__accordion .card-heading.active a:after {
 	content: "";
-font-family: 'Hi Melody', cursive;	font-size: 24px;
+font-family: "Roboto", sans-serif;	font-size: 24px;
 	font-weight: 700;
 	color: #111111;
 	position: absolute;
@@ -1574,7 +1575,7 @@ font-family: 'Hi Melody', cursive;	font-size: 24px;
 	right: -14px;
 	top: 0;
 	content: "";
-font-family: 'Hi Melody', cursive;}
+font-family: "Roboto", sans-serif;}
 
 .product__details__breadcrumb span {
 	font-size: 15px;
@@ -2076,7 +2077,7 @@ font-family: 'Hi Melody', cursive;}
 	right: -14px;
 	top: 0;
 	content: "";
-font-family: 'Hi Melody', cursive;}
+font-family: "Roboto", sans-serif;}
 
 .breadcrumb__links span {
 	font-size: 15px;
